# personalization-experimentation-platform

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: README.md  candidates_medium.yaml  candidates_smoke.yaml  event_log_schema.yaml  experiment_analysis_smoke.yaml  experiment_smoke.yaml  live_experiment_simulated_smoke.yaml  live_experiment_smoke.yaml  local_api.yaml  mind_full.yaml  mind_medium.yaml  mind_smoke.yaml  model_lifecycle_simulated_smoke.yaml  model_lifecycle_smoke.yaml  monitoring_smoke.yaml  portfolio_report_smoke.yaml  project_scaffold.yaml  ranker_compare_medium.yaml  ranker_compare_smoke.yaml  ranker_medium.yaml  ranker_smoke.yaml  ranker_tree_medium.yaml  ranking_dataset_medium.yaml  ranking_dataset_smoke.yaml  rerank_smoke.yaml  serving_simulation_smoke.yaml
data/fixtures/: README.md
data/fixtures/mind_medium/: behaviors.tsv  news.tsv
data/fixtures/mind_smoke/: behaviors.tsv  news.tsv
scripts/: ci_medium.sh  ci_simulated_live.sh  ci_smoke.sh  docker_medium.sh  docker_smoke.sh  local_quality.sh
src/personalization_platform/: __init__.py
src/personalization_platform/data/: __init__.py  event_log_config.py  event_log_schema.py  (+2 more)
tests/: test_artifact_lineage.py  test_candidate_merge.py  test_experiment_assignment.py  test_experiment_readout.py  test_failure_paths.py  test_imports.py  test_live_experiment_readout.py  test_local_api.py  test_model_lifecycle.py  test_ranking_comparison.py  test_request_time_feature_hydration.py  test_reranking_policy.py  test_serve_ranked_feed.py  test_serving_event_logging.py  test_serving_simulation.py
(+51 files in other folders)
